--- a/package.json
+++ b/package.json
@@ -4,21 +4,33 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "eslint": "eslint src --cache",
+    "eslint-fix": "npm run eslint -- --fix",
+    "prettier": "prettier --check src",
+    "prettier-write": "prettier --write src",
+    "preview": "vite preview",
+    "dev": "vite"
   },
   "dependencies": {
     "image-js": "^0.0.0-next-5076c621a0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-inspector": "^6.0.1",
+    "react-moveable": "^0.50.4",
     "react-router-dom": "^6.11.0"
+  },
+  "prettier": {
+    "singleQuote": true
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.40.0",
+    "eslint-config-cheminfo-typescript": "^11.3.1",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.8",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
