--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eslint": "^8.40.0",
     "eslint-config-cheminfo-typescript": "^11.3.1",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.8",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
