--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-inspector": "^6.0.1",
+    "react-kbs": "^2.1.1",
     "react-moveable": "^0.50.4",
     "react-router-dom": "^6.11.0"
   },
