--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "image-js": "^0.0.0-next-5076c621a0",
+    "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-inspector": "^6.0.1",
+    "react-kbs": "^2.1.1",
     "react-moveable": "^0.50.4",
     "react-router-dom": "^6.11.0"
   },
@@ -30,6 +32,8 @@
     "eslint": "^8.40.0",
     "eslint-config-cheminfo-typescript": "^11.3.1",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.8",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
