--- a/package.json
+++ b/package.json
@@ -1,35 +1,57 @@
 {
   "name": "react-roi",
   "version": "0.0.2",
+  "types": "lib-esm/index.d.ts",
   "type": "module",
+  "files": [
+    "lib",
+    "lib-esm",
+    "src"
+  ],
+  "main": "./lib/index.js",
+  "module": "./lib-esm/index.js",
   "scripts": {
     "build": "tsc && vite build",
+    "check-types": "tsc --noEmit",
+    "clean": "rimraf lib lib-esm",
+    "dev": "vite",
     "eslint": "eslint src --cache",
     "eslint-fix": "npm run eslint -- --fix",
+    "prepack": "npm run tsc",
     "prettier": "prettier --check src",
     "prettier-write": "prettier --write src",
     "preview": "vite preview",
-    "dev": "vite"
+    "test": "npm run test-only && npm run eslint && npm run prettier && npm run check-types",
+    "test-only": "vitest run --globals --coverage",
+    "tsc": "npm run clean && npm run tsc-cjs && npm run tsc-esm",
+    "tsc-cjs": "tsc --project tsconfig.cjs.json",
+    "tsc-esm": "tsc --project tsconfig.esm.json"
   },
   "dependencies": {
     "image-js": "0.0.0-next-794486e4b9",
     "immer": "^10.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-inspector": "^6.0.2",
-    "react-kbs": "^2.1.1",
-    "react-moveable": "^0.52.1",
-    "react-router-dom": "^6.14.0"
+    "react-kbs": "^2.1.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@types/jsdom": "^21.1.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
+    "@vitest/coverage-c8": "^0.32.4",
+    "@vitest/coverage-v8": "^0.32.4",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.43.0",
     "eslint-config-zakodium": "^7.2.0",
+    "jsdom": "^22.1.0",
     "prettier": "^2.8.8",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
+    "rimraf": "^5.0.1",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vitest": "^0.32.4"
   }
 }
