--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "tsc-esm": "tsc --project tsconfig.esm.json"
   },
   "dependencies": {
+    "@react-hook/resize-observer": "^1.2.6",
+    "i": "^0.3.7",
     "image-js": "^0.0.0-next-74561455b0",
     "immer": "^10.0.2",
+    "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-inspector": "^6.0.2",
     "react-kbs": "^2.1.1"
@@ -48,7 +51,6 @@
     "jsdom": "^22.1.0",
     "prettier": "^2.8.8",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
     "rimraf": "^5.0.1",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
