--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "tsc-esm": "tsc --project tsconfig.esm.json"
   },
   "dependencies": {
-    "image-js": "0.0.0-next-794486e4b9",
+    "@react-hook/resize-observer": "^1.2.6",
+    "i": "^0.3.7",
+    "image-js": "^0.0.0-next-74561455b0",
     "immer": "^10.0.2",
+    "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-inspector": "^6.0.2",
     "react-kbs": "^2.1.1"
@@ -43,12 +46,11 @@
     "@vitest/coverage-c8": "^0.32.4",
     "@vitest/coverage-v8": "^0.32.4",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.43.0",
-    "eslint-config-zakodium": "^7.2.0",
+    "eslint": "^8.45.0",
+    "eslint-config-zakodium": "^8.0.2",
     "jsdom": "^22.1.0",
     "prettier": "^2.8.8",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
     "rimraf": "^5.0.1",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
