chore: update deps and run more files through prettier

--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -5,8 +5,5 @@
     "declaration": true,
     "declarationMap": true
   },
-  "exclude": [
-    "./src/**/__tests__",
-    "vite.config.ts"
-  ]
+  "exclude": ["./src/**/__tests__", "vite.config.ts"]
 }
