--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "eslint": "eslint src --cache",
     "eslint-fix": "npm run eslint -- --fix",
     "prepack": "npm run tsc",
-    "prettier": "prettier --check src",
-    "prettier-write": "prettier --write src",
+    "prettier": "prettier --check ./",
+    "prettier-write": "prettier --write ./",
     "preview": "vite preview",
     "test": "npm run test-only && npm run eslint && npm run prettier && npm run check-types",
     "test-only": "vitest run --globals --coverage",
@@ -29,31 +29,29 @@
   },
   "dependencies": {
     "@react-hook/resize-observer": "^1.2.6",
-    "i": "^0.3.7",
-    "image-js": "^0.0.0-next-74561455b0",
+    "image-js": "0.0.0-next-74561455b0",
     "immer": "^10.0.2",
     "npm": "^9.8.1",
     "react": "^18.2.0",
-    "react-inspector": "^6.0.2",
     "react-kbs": "^2.1.1"
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/jsdom": "^21.1.1",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@vitejs/plugin-react": "^4.0.1",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.4",
     "@vitest/coverage-c8": "^0.32.4",
-    "@vitest/coverage-v8": "^0.32.4",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.45.0",
+    "@vitest/coverage-v8": "^0.34.2",
+    "autoprefixer": "^10.4.15",
+    "eslint": "^8.47.0",
     "eslint-config-zakodium": "^8.0.2",
     "jsdom": "^22.1.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.2",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.1",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.4"
+    "vite": "^4.4.9",
+    "vitest": "^0.34.2"
   }
 }
