--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": false,
-    "target": "ES2022",
+    "target": "ES2022"
   },
   "include": ["./src/**/*"]
 }
