feat: add playwright settings for testing

--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -5,5 +5,8 @@
     "declaration": true,
     "declarationMap": true
   },
-  "exclude": ["./src/**/__tests__", "vite.config.ts"]
+  "exclude": [
+    "./src/**/__tests__",
+    "vite.config.ts"
+  ]
 }
