--- a/package.json
+++ b/package.json
@@ -15,19 +15,25 @@
     "check-types": "tsc --noEmit",
     "clean": "rimraf lib lib-esm",
     "dev": "vite",
+    "dev-app": "vite --open /pages/demo.html",
     "eslint": "eslint src --cache",
     "eslint-fix": "npm run eslint -- --fix",
+    "playwright": "npm run playwright-ct -- --project chromium && npm run playwright-e2e -- --project chromium",
+    "playwright-ct": "playwright test -c playwright-ct.config.ts",
+    "playwright-e2e": "playwright test -c playwright-e2e.config.ts",
     "prepack": "npm run tsc",
     "prettier": "prettier --check ./",
     "prettier-write": "prettier --write ./",
     "preview": "vite preview",
-    "test": "npm run test-only && npm run eslint && npm run prettier && npm run check-types",
-    "test-only": "vitest run --globals --coverage",
+    "test": "npm run playwright && npm run test-only && npm run eslint && npm run prettier && npm run check-types",
+    "test-only": "vitest run --coverage",
     "tsc": "npm run clean && npm run tsc-cjs && npm run tsc-esm",
     "tsc-cjs": "tsc --project tsconfig.cjs.json",
     "tsc-esm": "tsc --project tsconfig.esm.json"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@react-hook/resize-observer": "^1.2.6",
     "image-js": "0.0.0-next-74561455b0",
     "immer": "^10.0.2",
@@ -36,12 +42,13 @@
     "react-kbs": "^2.1.1"
   },
   "devDependencies": {
+    "@playwright/experimental-ct-react": "^1.38.0",
+    "@playwright/test": "^1.38.0",
     "@testing-library/react": "^14.0.0",
     "@types/jsdom": "^21.1.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
-    "@vitest/coverage-c8": "^0.32.4",
     "@vitest/coverage-v8": "^0.34.2",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.47.0",
