--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: 18.x
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Install Playwright
         run: npx playwright install --with-deps
       - name: Run ${{ matrix.test-type }} tests on ${{ matrix.project }}
