--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,15 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "esModuleInterop": true,
     "jsx": "react-jsx",
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ESNext"
-    ],
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ES2022",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "Node",
     "outDir": "lib",
     "sourceMap": true,
     "strict": false,
     "target": "ES2022",
-    "types": [
-      "vite/client"
-    ]
+    "types": ["vite/client"]
   },
-  "include": [
-    "./src/**/*",
-    "./playwright",
-    "playwright-*.ts",
-    "./tests",
-  ],
-  "exclude": [
-    "./src/__tests__/**/*",
-    "node_modules"
-  ]
+  "include": ["./src", "./tests"],
+  "exclude": ["node_modules"]
 }
