--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,7 +1,10 @@
 {
   "extends": "./tsconfig.cjs.json",
   "compilerOptions": {
-    "module": "es2020",
-    "outDir": "lib-esm"
+    "declaration": true,
+    "declarationMap": true,
+    "outDir": "lib-esm",
+    "module": "ES2022",
+    "sourceMap": true
   }
 }
