--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
     "jsx": "react-jsx",
-    "module": "ESNext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "module": "ES2022",
     "moduleResolution": "Node",
     "outDir": "lib",
     "sourceMap": true,
     "strict": false,
-    "target": "ES2022"
+    "target": "ES2022",
+    "types": ["vite/client"]
   },
-  "include": ["./src/**/*"],
-  "exclude": ["./src/__tests__/**/*"]
+  "include": ["./src", "./tests"],
+  "exclude": ["node_modules"]
 }
