--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "main": "./lib/index.js",
   "module": "./lib-esm/index.js",
   "scripts": {
+    "storybook": "storybook dev -p 6006",
     "build": "tsc && vite build",
     "check-types": "tsc --noEmit",
     "clean": "rimraf lib lib-esm",
@@ -42,6 +43,10 @@
   "devDependencies": {
     "@playwright/experimental-ct-react": "^1.38.0",
     "@playwright/test": "^1.38.0",
+    "@storybook/addon-essentials": "^7.5.2",
+    "@storybook/addon-storysource": "^7.5.2",
+    "@storybook/react": "^7.5.2",
+    "@storybook/react-vite": "^7.5.2",
     "@testing-library/react": "^14.0.0",
     "@types/jsdom": "^21.1.1",
     "@types/react": "^18.2.20",
@@ -55,6 +60,7 @@
     "prettier": "^3.0.2",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.1",
+    "storybook": "^7.5.2",
     "typescript": "^5.1.6",
     "vite": "^4.4.9"
   }
