test: remove e2e test

--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "dev": "storybook dev -p 6006",
     "eslint": "eslint src --cache",
     "eslint-fix": "npm run eslint -- --fix",
-    "playwright": "npm run playwright-ct -- --project chromium && npm run playwright-e2e -- --project chromium",
+    "playwright": "npm run playwright-ct -- --project chromium",
     "playwright-ct": "playwright test -c playwright-ct.config.ts",
-    "playwright-e2e": "playwright test -c playwright-e2e.config.ts",
     "prepack": "npm run tsc",
     "prettier": "prettier --check ./",
     "prettier-write": "prettier --write ./",
