--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         project: [chromium, firefox, webkit]
-        test-type: [ct, e2e]
+        test-type: [ct]
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
