--- a/package.json
+++ b/package.json
@@ -22,17 +22,12 @@
     "prettier": "prettier --check ./",
     "prettier-write": "prettier --write ./",
     "test": "npm run playwright && npm run eslint && npm run prettier && npm run check-types",
-    "tsc": "npm run clean && npm run tsc-cjs && npm run tsc-esm",
-    "tsc-cjs": "tsc --project tsconfig.cjs.json",
+    "tsc": "npm run clean && npm run tsc-esm",
     "tsc-esm": "tsc --project tsconfig.esm.json"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@react-hook/resize-observer": "^1.2.6",
-    "image-js": "0.0.0-next-74561455b0",
     "immer": "^10.0.2",
-    "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-kbs": "^2.1.1"
   },
@@ -43,18 +38,11 @@
     "@storybook/addon-storysource": "^7.5.2",
     "@storybook/react": "^7.5.2",
     "@storybook/react-vite": "^7.5.2",
-    "@testing-library/react": "^14.0.0",
-    "@types/jsdom": "^21.1.1",
     "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.4",
-    "@vitest/coverage-v8": "^0.34.2",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.47.0",
     "eslint-config-zakodium": "^8.0.2",
-    "jsdom": "^22.1.0",
     "prettier": "^3.0.2",
-    "react-dom": "^18.2.0",
     "rimraf": "^5.0.1",
     "storybook": "^7.5.2",
     "typescript": "^5.1.6",
