--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@storybook/addon-storysource": "^7.5.2",
     "@storybook/react": "^7.5.2",
     "@storybook/react-vite": "^7.5.2",
+    "@types/node": "^20.8.10",
     "@types/react": "^18.2.20",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.47.0",
@@ -46,6 +47,7 @@
     "rimraf": "^5.0.1",
     "storybook": "^7.5.2",
     "typescript": "^5.1.6",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "image-js": "0.0.0-next-74561455b0"
   }
 }
