--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "sourceMap": true,
     "strict": false,
     "target": "ES2022",
-    "types": ["vite/client"]
+    "types": ["vite/client", "node"]
   },
   "include": ["./src", "./tests"],
   "exclude": ["node_modules"]
