--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "target": "ES2022",
     "types": ["vite/client", "node"]
   },
-  "include": ["./src", "./tests"],
+  "include": ["./src", "./tests", "./stories"],
   "exclude": ["node_modules"]
 }
