feat: add className support (#44)
The kitchen sink was replaced with storybook and we moved from github pages to cloudflare
Use callback to update styles
The api was reviewed to keep only the strict minimum + some new exported types
adding an ROI now throws if the id already exists

BREAKING CHANGE: do not export useRois hook

BREAKING CHANGE: fix typo in useCommitedRois, now useCommittedRois

---------

Co-authored-by: Daniel Kostro <kostro.d@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "sourceMap": true,
     "strict": false,
     "target": "ES2022",
-    "types": ["vite/client"]
+    "types": ["vite/client", "node"]
   },
-  "include": ["./src", "./tests"],
+  "include": ["./src", "./tests", "./stories"],
   "exclude": ["node_modules"]
 }
