--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rimraf": "^5.0.1",
     "storybook": "^7.5.2",
     "typescript": "^5.1.6",
+    "uuid": "^9.0.1",
     "vite": "^4.4.9"
   }
 }
