--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,5 +1,6 @@
 {
-  "extends": "./tsconfig.cjs.json",
+  "extends": "./tsconfig.json",
+  "include": ["./src"],
   "compilerOptions": {
     "declaration": true,
     "declarationMap": true,
