--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   },
   "dependencies": {
     "@react-hook/resize-observer": "^1.2.6",
-    "immer": "^10.0.2",
-    "react": "^18.2.0"
+    "immer": "^10.0.2"
   },
   "devDependencies": {
     "@playwright/experimental-ct-react": "^1.38.0",
@@ -41,9 +40,11 @@
     "@types/react": "^18.2.20",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.47.0",
-    "eslint-config-zakodium": "^8.0.2",
+    "eslint-config-zakodium": "^8.1.0",
     "image-js": "0.0.0-next-74561455b0",
     "prettier": "^3.1.0",
+    "react": "^18.2.0",
+    "react-kbs": "^2.1.1",
     "rimraf": "^5.0.1",
     "storybook": "^7.5.2",
     "typescript": "^5.1.6",
