fix: resolve the jittering issue when "round" commit strategy is used
BREAKING CHANGE: make round the default commit box strategy

- fix jiggling by using a remainder and updating size by whole numbers
- move files and fix label
- choose typescript version compatible with eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "types": ["vite/client", "node"],
     "skipLibCheck": true
   },
-  "include": ["./src", "./tests", "./stories"],
+  "include": ["./src", "./tests", "./stories", "./vitest.config.ts"],
   "exclude": ["node_modules"]
 }
