--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "prettier --check ./",
     "prettier-write": "prettier --write ./",
     "test": "npm run playwright && npm run eslint && npm run prettier && npm run check-types",
+    "test-only": "vitest",
     "tsc": "npm run clean && npm run tsc-esm",
     "tsc-esm": "tsc --project tsconfig.esm.json"
   },
@@ -47,8 +48,9 @@
     "react-kbs": "^2.1.1",
     "rimraf": "^5.0.1",
     "storybook": "^7.5.2",
-    "typescript": "^5.1.6",
+    "typescript": "~5.3.3",
     "uuid": "^9.0.1",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vitest": "^1.3.1"
   }
 }
