--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "0.16.1",
   "types": "lib-esm/index.d.ts",
   "files": [
-    "lib",
     "lib-esm",
     "src"
   ],
-  "main": "./lib/index.js",
   "module": "./lib-esm/index.js",
   "scripts": {
     "build": "storybook build",
     "check-types": "tsc --noEmit",
-    "clean": "rimraf lib lib-esm",
+    "clean": "rimraf lib-esm",
     "dev": "storybook dev -p 6006",
     "eslint": "eslint src stories --cache",
     "eslint-fix": "npm run eslint -- --fix",
@@ -22,6 +20,7 @@
     "prettier": "prettier --check ./",
     "prettier-write": "prettier --write ./",
     "test": "npm run playwright && npm run eslint && npm run prettier && npm run check-types",
+    "test-only": "vitest",
     "tsc": "npm run clean && npm run tsc-esm",
     "tsc-esm": "tsc --project tsconfig.esm.json"
   },
@@ -41,14 +40,15 @@
     "autoprefixer": "^10.4.15",
     "eslint": "^8.47.0",
     "eslint-config-zakodium": "^8.1.0",
-    "image-js": "0.0.0-next-74561455b0",
+    "image-js": "0.0.0-next-3f36e575c9",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-kbs": "^2.1.1",
     "rimraf": "^5.0.1",
     "storybook": "^7.5.2",
-    "typescript": "^5.1.6",
+    "typescript": "~5.3.3",
     "uuid": "^9.0.1",
-    "vite": "^4.4.9"
+    "vite": "^4.5.2",
+    "vitest": "^1.3.1"
   }
 }
