--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "react-roi",
   "version": "1.5.0",
-  "type": "module",
-  "exports": {
-    ".": "./lib-esm/index.js"
-  },
+  "types": "lib-esm/index.d.ts",
   "files": [
     "lib-esm",
     "src"
   ],
+  "module": "./lib-esm/index.js",
   "scripts": {
     "build": "storybook build",
     "check-types": "tsc --noEmit",
