--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,10 +15,10 @@ jobs:
         test-type: [ct]
       fail-fast: false
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v5
+      - uses: actions/setup-node@v6
         with:
-          node-version: 18.x
+          node-version-file: package.json
       - name: Install dependencies
         run: npm install
       - name: Install Playwright
