--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "react-roi",
   "version": "1.5.0",
-  "types": "lib-esm/index.d.ts",
   "files": [
     "lib-esm",
     "src"
   ],
-  "module": "./lib-esm/index.js",
+  "type": "module",
+  "exports": {
+    ".": "./lib-esm/index.js"
+  },
   "scripts": {
     "build": "storybook build",
     "check-types": "tsc --noEmit",
     "clean": "rimraf lib-esm",
     "dev": "storybook dev -p 6006",
-    "eslint": "eslint src stories --cache",
+    "eslint": "eslint ./ --cache",
     "eslint-fix": "npm run eslint -- --fix",
     "playwright": "npm run playwright-ct -- --project chromium",
     "playwright-ct": "playwright test -c playwright-ct.config.ts",
@@ -25,30 +27,31 @@
     "tsc-esm": "tsc --project tsconfig.esm.json"
   },
   "dependencies": {
-    "@react-hook/resize-observer": "^1.2.6",
-    "immer": "^10.0.2"
+    "@react-hook/resize-observer": "^2.0.2",
+    "immer": "^10.2.0",
+    "use-resize-observer": "^9.1.0"
   },
   "devDependencies": {
-    "@playwright/experimental-ct-react": "^1.38.0",
-    "@playwright/test": "^1.38.0",
-    "@storybook/addon-essentials": "^7.5.2",
-    "@storybook/addon-storysource": "^7.5.2",
-    "@storybook/react": "^7.5.2",
-    "@storybook/react-vite": "^7.5.2",
-    "@types/node": "^20.8.10",
-    "@types/react": "^18.2.20",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.47.0",
-    "eslint-config-zakodium": "^8.1.0",
-    "image-js": "0.0.0-next-d280f46ab7",
-    "prettier": "^3.2.5",
-    "react": "^18.2.0",
+    "@playwright/experimental-ct-react": "^1.56.1",
+    "@playwright/test": "^1.56.1",
+    "@storybook/addon-docs": "^10.0.2",
+    "@storybook/react-vite": "^10.0.2",
+    "@types/node": "^24.9.2",
+    "@types/react": "^18.3.26",
+    "@zakodium/tsconfig": "^1.0.2",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.38.0",
+    "eslint-config-zakodium": "^17.0.0",
+    "image-js": "^1.0.0",
+    "prettier": "^3.6.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-kbs": "^2.1.1",
-    "rimraf": "^5.0.1",
-    "storybook": "^7.5.2",
-    "typescript": "~5.3.3",
-    "uuid": "^9.0.1",
-    "vite": "^4.5.2",
-    "vitest": "^1.3.1"
+    "rimraf": "^6.1.0",
+    "storybook": "^10.0.2",
+    "typescript": "~5.9.3",
+    "uuid": "^13.0.0",
+    "vite": "^7.1.12",
+    "vitest": "^4.0.5"
   }
 }
