chore: try with use-resize-observer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "extends": "@zakodium/tsconfig/jsx",
   "compilerOptions": {
-    "noUncheckedIndexedAccess": false,
-    "types": ["vite/client", "node"],
-    "skipLibCheck": true
+    "noUncheckedIndexedAccess": false
   },
   "include": [
     "./src",
