--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "tsc-esm": "tsc --project tsconfig.esm.json"
   },
   "dependencies": {
-    "@react-hook/resize-observer": "^2.0.2",
-    "immer": "^10.2.0",
-    "use-resize-observer": "^9.1.0"
+    "immer": "^10.2.0"
   },
   "devDependencies": {
     "@playwright/experimental-ct-react": "^1.56.1",
