--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react": ">=18"
   },
   "dependencies": {
-    "immer": "^10.2.0"
+    "@react-hook/resize-observer": "^2.0.2",
+    "immer": "^10.2.0",
+    "use-resize-observer": "^9.1.0"
   },
   "devDependencies": {
     "@playwright/experimental-ct-react": "^1.56.1",
