Revert "chore: try with use-resize-observer"
This reverts commit fc259292466baf8c73d147730e9e5fa7b37a62a6.

--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
   },
   "dependencies": {
     "@react-hook/resize-observer": "^2.0.2",
-    "immer": "^10.2.0",
-    "use-resize-observer": "^9.1.0"
+    "immer": "^10.2.0"
   },
   "devDependencies": {
     "@playwright/experimental-ct-react": "^1.56.1",
