--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "@zakodium/tsconfig/jsx",
   "compilerOptions": {
-    "noUncheckedIndexedAccess": false
+    "noUncheckedIndexedAccess": false,
+    "types": ["vite/client", "node"],
+    "skipLibCheck": true
   },
   "include": [
     "./src",
