fix: revert to using a mutable ref in useResizeObserver hook (#165)
* Revert "chore: try another implementation of useResizeObserver"

This reverts commit e511e9b04da8b4f581144cbc5cc5385f4333c189.

* Revert "chore: try with use-resize-observer"

This reverts commit fc259292466baf8c73d147730e9e5fa7b37a62a6.

* chore: add TODOs

* chore: fix tsconfig

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": ">=18"
   },
   "dependencies": {
+    "@react-hook/resize-observer": "^2.0.2",
     "immer": "^10.2.0"
   },
   "devDependencies": {
